# physical-ai-humanoid-robotic-book

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
api-backend/: .gitignore  README.md  main.py  pyproject.toml  requirements-test.txt  requirements.txt
api-backend/app/api/v1/routes/: auth.py  chat.py  ingest.py
api-backend/app/core/: database.py  settings.py
api-backend/app/models/: __init__.py  chat.py  user.py
api-backend/app/schemas/: chat.py  user.py
api-backend/app/utils/: __init__.py  embeddings.py  logging.py  qdrant_client.py
api-backend/tests/: README.md  conftest.py
api-backend/tests/test_core/: test_database.py  test_settings.py
api-backend/tests/test_routes/: test_chat.py  test_ingest.py
api-backend/tests/test_schemas/: test_chat_schemas.py
api-backend/tests/test_utils/: test_embeddings.py  test_logging.py  test_qdrant_client.py
backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_imports.py
backend/agent/: README.md  agent.py  schemas.py  test_retriever.py
backend/database/: __init__.py  models.py  schemas.py  services.py
backend/embedding/: ingestor.py  reset_collection.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 26002970313d_fix_column_name_from_is_verified_to_.py  3a938ddddd47_rename_auth_and_background_columns_to_.py  8edd4bc6532f_add_authentication_and_background_.py  c9ccd22d7d65_add_personalized_content_table.py  d4857f64cf56_initial_migration_for_neon_database.py
backend/test/: debug_env.py  test_api.py  test_chat_persistence.py  test_connection_simple.py  test_connection_stability.py  test_debug.py  test_detailed_debug.py  test_final_verification.py  test_imports.py  test_neon_integration.py  test_neon_integration_complete.py  test_real_data_flow.py  test_table_verification.py
backend/test/better-auth-personalization/: test_auth_personalization.py
backend/utils/: auth_middleware.py  password_utils.py  token_utils.py
book-frontend/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
book-frontend/docs/: certificate.md  course-summary.md  glossary.md  index.md  intro.md
docs/: authentication-personalization-implementation-summary.md  neon-integration-summary.md
history/adr/: 0001-neon-database-integration.md  001-floating-chat-architecture.md
specs/001-robotics-textbook/: plan.md  spec.md  tasks.md
specs/1-rag-chatbot/: data-model.md  data-model2-retrieval.md  data-model3-agent.md  plan.md  plan2-retrieval-implementation.md  plan3-agent-implementation.md  plan4-frontend-backend-integration.md  quickstart.md  quickstart2-retrieval.md  quickstart3-agent.md  research.md  research2-retrieval.md  research3-agent.md  spec.md  spec2-retrieval-functionality.md  spec3-agent-backend.md  spec4-frontend-backend-integration.md  tasks.md  tasks2-retrieval-implementation.md  tasks3-agent-implementation.md  (+1 more)
(+136 files in other folders)
